# django-ecommerce-api

./: README.md  pyproject.toml
ecommerce_django/: manage.py  requirements.txt
ecommerce_django/ecommerce_django/: .env.dist  asgi.py  settings.py  urls.py  wsgi.py
ecommerce_django/order/: admin.py  models.py  serializers.py  urls.py  views.py
ecommerce_django/order/migrations/: 0001_initial.py  0001_initial_squashed_0003_order_stripe_token.py  0002_remove_order_stripe_token.py  0003_order_stripe_token.py
ecommerce_django/product/: models.py  serializers.py  urls.py  views.py
ecommerce_django/product/migrations/: 0001_initial.py
ecommerce_django/tests/: conftest.py  test_checkout.py  test_stripe_integration.py
ecommerce_django/tests/utils/: api_token.py
